Fix wrapping of embed code.

--- a/themes/odi/static/less/map.less
+++ b/themes/odi/static/less/map.less
@@ -69,6 +69,15 @@ html, body {
     font-size: 16px;
 }
 
+xmp {
+    -ms-word-break: break-all;
+     word-break: break-all;
+     word-break: break-word;
+-webkit-hyphens: auto;
+   -moz-hyphens: auto;
+        hyphens: auto;
+}
+
 html, body, input, select, textarea {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
